# xml-disassembler

./: .eslintrc.json  .gitignore  .mega-linter.yml  .npmignore  .releaserc.json  .xmldisassemblerignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE.md  README.md  jest.config.json  package-lock.json  package.json  pnpm-lock.yaml  rollup.config.mjs  tsconfig.json  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: build.yml  deprecate-versions.yml  manage-versions.yml  manual-deprecate-versions.yml  mega-linter.yml  release.yml  smoke-test.yml  test-npm-package.yml
fixtures/array-of-leaves/: Dreamhouse.app-meta.xml
fixtures/attributes/: notes.xml
fixtures/cdata/: VidLand_US.marketingappextension-meta.xml
fixtures/comments/: Numbers-fr.globalValueSetTranslation-meta.xml
fixtures/split-tags/: HR_Admin.permissionset-meta.xml
scripts/: build-native.js  copy-native.js  native-loader.cjs  smoke-test-published.cjs
src/: index.ts  lib.rs  native-dir.ts  rustBindings.ts
src/helpers/: types.ts  (+1 more)
test/: Just_Shop.loyaltyProgramSetup-meta.xml  asyncQueue.spec.ts  compare.ts  group-by-tag.spec.ts  index.spec.ts  main.spec.ts  mergeXmlElements.spec.ts  multi-level..ts  multi-level.spec.ts  native-dir.spec.ts  objectPool.spec.ts  rustBindings.spec.ts  split-tags.spec.ts  transform.spec.ts  uid.spec.ts
types/: xml-diassemble.d.ts
xml-diassemble/: Cargo.toml  README.md  package.json
xml-diassemble/src/: lib.rs
xml-disassembler-crate/: .npmignore  Cargo.toml  README.md  package-lock.json  package.json
xml-disassembler-crate/src/: lib.rs
(+60 files in other folders)
