[package]
name = "xml-diassemble"
version = "0.1.0"
authors = ["Matt Carvin"]
license = "MIT"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neon = "1.1"
serde_json = "1"
xml-disassembler = "0.1.5"
tokio = { version = "1", features = ["rt-multi-thread"] }
