[package]
name = "xml-disassembler-crate"
version = "0.1.0"
authors = ["Matt Carvin"]
license = "MIT"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
neon = "1.1"
xml-disassembler = "0.1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util"] }
env_logger = "0.11"
serde_json = "1"
log = "0.4"
